--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "if-env": "^1.0.4",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.7.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
