--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "graphql": "^15.5.0",
     "if-env": "^1.0.4",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
